// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton rendering renders the expected elements 1`] = `
<button
  aria-label="Test"
  className="IconButton IconButton--medium IconButton--ghost TestClass"
  id="test"
  type="button"
>
  <SvgIcon
    icon={Object {}}
  />
</button>
`;

exports[`IconButton rendering renders the expected elements if disabled is true 1`] = `
<button
  aria-label="Test"
  className="IconButton IconButton--medium IconButton--ghost"
  disabled={true}
  id="test"
  onClick={null}
  type="button"
>
  <SvgIcon
    icon={Object {}}
  />
</button>
`;

exports[`IconButton rendering renders the expected elements when className is not set 1`] = `
<button
  aria-label="Test"
  className="IconButton IconButton--medium IconButton--ghost"
  id="test"
  type="button"
>
  <SvgIcon
    icon={Object {}}
  />
</button>
`;

exports[`IconButton rendering renders the expected elements when size and tooltipPlacement are set 1`] = `
<button
  aria-label="Test"
  className="IconButton IconButton--large IconButton--ghost"
  id="test"
  type="button"
>
  <SvgIcon
    icon={Object {}}
  />
</button>
`;

exports[`IconButton rendering renders the expected elements when tooltipText is not set 1`] = `
<button
  aria-label="Test"
  className="IconButton IconButton--medium IconButton--ghost TestClass"
  id="test"
  type="button"
>
  <SvgIcon
    icon={Object {}}
  />
</button>
`;
